<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/string_note"
        android:textColor="@color/app_base_color"
        android:textSize="@dimen/text_18_36" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/disable_text_color" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:lines="3"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/string_note_hint"
        android:linksClickable="true"
        android:padding="@dimen/padding_block"
        android:textColorHint="@color/disable_text_color"
        android:textColorLink="@color/app_base_color"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/text_16_32" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_btn_cancel"
            style="@style/DialogButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/string_cancel" />

        <Button
            android:id="@+id/add_btn_log_time"
            style="@style/DialogButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/string_ok" />

    </LinearLayout>

</LinearLayout>