<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- TOOLBAR -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_activity_change_password"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!-- CONTENT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_block"
        android:paddingRight="@dimen/padding_block">

        <!-- LAYOUT OLD PASSWORD -->
        <EditText
            android:id="@+id/ed_old_password"
            style="@style/ChangePasswordEditText"
            android:hint="@string/change_password_hint_old_password"/>

        <!-- LAYOUT NEW PASSWORD -->
        <EditText
            android:id="@+id/ed_new_password"
            style="@style/ChangePasswordEditText"
            android:hint="@string/change_password_hint_new_password"/>

        <!-- LAYOUT CONFIRM PASSWORD -->
        <EditText
            android:id="@+id/ed_confirm_password"
            style="@style/ChangePasswordEditText"
            android:hint="@string/change_password_hint_confirm_password"/>

        <!-- BUTTON CHANGE -->
        <TextView
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_block"
            android:background="@drawable/bg_button_rounded"
            android:gravity="center"
            android:elevation="4dp"
            android:padding="@dimen/padding_block"
            android:text="@string/change_password_button_change_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>