<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_block">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/auto_login_company_ID"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_auto_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/auto_login_user_ID"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_auto_login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_company_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:lines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_auto_login" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:lines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_auto_login" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:text="@string/auto_login_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_auto_login" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/padding_block"
            android:text="@string/auto_login_button_no"
            android:textColor="@color/app_base_color"
            android:textSize="@dimen/text_size_auto_login" />

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/padding_block"
            android:text="@string/auto_login_button_yes"
            android:textColor="@color/app_base_color"
            android:textSize="@dimen/text_size_auto_login" />
    </LinearLayout>
</LinearLayout>