<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_intro_01_bg"
    tools:context="timecard.dazone.com.dazonetimecard.fragments.IntroFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/intro_padding"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="130dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/slider_intro_01_blue"
            android:scaleType="fitXY"
            android:layout_height="130dp" />
        <TextView
            android:padding="@dimen/padding_block"
            android:gravity="center"
            android:textSize="27sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/intro1_text1"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/intro1_text2"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>
