<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_intro_05_bg"
    tools:context="timecard.dazone.com.dazonetimecard.fragments.IntroFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/intro_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/intro5_text1"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/intro5_text2"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <!-- <TextView
             android:id="@+id/company_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:text="@string/intro5_text3"
             android:textColor="@color/white"/>-->

        <RelativeLayout
            android:id="@+id/login_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_activity_login_sign_up_button">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/company_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_sign_up"
                    android:textColor="#ffffff"
                    android:textSize="17sp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
